# template-rust-aws-lambda

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: aarch64-unknown-linux-gnu.yml
src/: main.rs
